--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,5 @@
-
 body{
-    background-color: black;
+    background-color:black;
     font-family: 'Montserrat Alternates', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Rubik', sans-serif;
@@ -11,9 +10,12 @@ body{
     justify-content: center;
 }
 
+.r{
+    color: 
+}
+
 .navegacion{
     display: flex;
-    flex-direction: column;
     justify-content: center; 
 }
 
@@ -31,11 +33,35 @@ body{
 
 .imagen-banner{
     width:100%;
-    height:100%;
+    width:100%;
 }
 
 .h2-informacion{
     display: flex;
+    justify-content: center;
+}
+
+.h2-femenino{
+    display: flex;
+    justify-content: center;
+    
+}
+
+.h2-masculino{
+    display: flex;
+    justify-content: center;
+}
+
+.imagen-femenino{
+    width: 100%;
+}
+
+.imagen-masculino{
+    width: 100%;
+}
+
+.contenedor-posiciones-femenino{
+    display: grid;
     justify-content: center;
 }
 
@@ -50,17 +76,22 @@ h2{
     color: aliceblue;
 }
 
+
 p, table {
     color:aliceblue;
     text-align: center;
     
 }
-
 a{
     text-decoration: none;
     color: aliceblue;
 }
 
+.posiciones-masculino{
+    display: inline-block;
+    position: relative;
+    margin-left: 550px;
+}
 footer{
     color:aliceblue;
     text-align: center;
@@ -75,11 +106,9 @@ footer{
 .button{
     width: 20px;
 }
-
 input{
    width: 300px;
   }
-
 .mensaje{
     height:100px;
 }
@@ -108,12 +137,12 @@ input{
     justify-content: center;
 }
 
-
+   
 .contenedor-posiciones-masculino{
     display: flex;
     justify-content: center;
 }
-   
+
 /*INDEX GRID AREA*/
 
     .contenedor{
@@ -152,37 +181,6 @@ input{
     /* INDEX MEDIA TABLET */
 
     @media screen and (min-width:768px){
-        .contenedor{
-            grid-template-columns: 100%;
-            grid-template-areas: 
-            "header"
-            "portada"
-            "banner"
-            "femenino"
-            "masculino"
-            "redes"
-            ;
-            }
-            
-            .header{
-                grid-area: header;
-            }
-            .main{
-                grid-area:portada;
-            }
-            .main{
-                grid-area: banner;
-            }
-            .main{
-                grid-area: femenino; 
-            }
-            .main{
-                grid-area: masculino;
-            }
-            .footer{
-                grid-area: redes;
-            }
-        
        .contenedor-logo{
            display: grid;
            grid-template-columns: 20% 80%;
@@ -191,11 +189,46 @@ input{
        }      
 
        .navegacion{
-           display: flex;
-           flex-direction: row;
+           display: flex; 
            justify-content: flex-end;
+           transform: translate(0, 10px, 0, 0);
        }
+
+        
+
        
+        .contenedor{
+        grid-template-columns: 100%;
+        grid-template-areas: 
+        "header"
+        "portada"
+        "banner"
+        "femenino"
+        "masculino"
+        "redes"
+        ;
+        }
+        
+        .header{
+            grid-area: header;
+        }
+        .main{
+            grid-area:portada;
+        }
+        .main{
+            grid-area: banner;
+        }
+        .main{
+            grid-area: femenino; 
+        }
+        .main{
+            grid-area: masculino;
+        }
+        .footer{
+            grid-area: redes;
+        }
+        
+        
     }
         
     /* INDEX MEDIA DESKTOP */
@@ -231,6 +264,7 @@ input{
             .footer{
                 grid-area: redes;
             }
+            
 
         .contenedor-logo{
             display: grid;
@@ -239,12 +273,8 @@ input{
             align-items: center;
         }      
  
-        
-            
-
         .navegacion{
             display: flex; 
-            flex-direction: row;
             justify-content: flex-end;
         }
 
@@ -283,34 +313,39 @@ input{
             filter: opacity(0.5);
         }
        
-        .imagen-femenino:hover{
+        .portada-femenino:hover{
+            filter: opacity(0.5);
+        }
+
+        .portada-masculino:hover{
             filter: opacity(0.5);
         }
  
-       .imagen-masculino:hover{
-           filter: opacity(0.5);
-       }
+       
        
         
         
     }
+        
+
+
 
     /* FEMENINO GRID AREAS*/
 
-    .contenedor-femenino{
+    .posiciones-femenino{
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: auto auto auto auto auto;
         grid-template-areas:
-        "navegacion"
+        "navegacion-femenino"
         "intro-femenino"
         "portada-femenino"
-        "contenedor-posiciones-femenino"
+        "posiciones-femenino"
         "redes"
         ;
     }
 
-    .header{
+    .header-femenino{
         grid-area: navegacion;
     }
     .main-femenino{
@@ -320,7 +355,7 @@ input{
         grid-area: portada-femenino;
     }
     .main-femenino{
-        grid-area: contenedor-posiciones-femenino;
+        grid-area: posiciones-femenino;
     }
     .footer{
         grid-area: redes;
@@ -335,12 +370,6 @@ input{
             grid-template-rows: 80%;
         }
 
-        .navegacion{
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-        }
-
         .menu li{
             display: inline-block;
         }
@@ -351,12 +380,12 @@ input{
         "navegacion"
         "intro-femenino"
         "portada-femenino"
-        "contenedor-posiciones-femenino"
+        "posiciones-femenino"
         "redes-femenino"
         ;
         }
         
-        .header{
+        .header-femenino{
             grid-area: navegacion;
         }
         .main-femenino{
@@ -366,18 +395,13 @@ input{
             grid-area: portada-femenino;
         }
         .main-femenino{
-            grid-area: contenedor-posiciones-femenino; 
+            grid-area: posiciones-femenino; 
         }
         .footer-femenino{
             grid-area: redes;
         }
         
-        .portada-femenino:hover{
-            filter: opacity(0.5);
-        }
     }
-       
-
 
 /*FEMENINO MEDIA DESKTOP */
 
@@ -388,42 +412,12 @@ input{
         "navegacion"
         "intro-femenino"
         "portada-femenino"
-        "contenedor-posiciones-femenino"
+        "posiciones-femenino"
         "redes-femenino"
         ;
-            grid-template-columns: 100%;
-            grid-template-areas: 
-            "navegacion"
-            "intro-femenino"
-            "portada-femenino"
-            "contenedor-posiciones-femenino"
-            "redes-femenino"
-            ;
-            }
-            
-            .header{
-                grid-area: navegacion;
-            }
-            .main-femenino{
-                grid-area: intro-femenino;
-            }
-            .main-femenino{
-                grid-area: portada-femenino;
-            }
-            .main-femenino{
-                grid-area: contenedor-posiciones-femenino; 
-            }
-            .footer-femenino{
-                grid-area: redes;
-            }
-            
-            .portada-femenino:hover{
-                filter: opacity(0.5);
-            }
         }
-
         
-        .header{
+        .header-femenino{
             grid-area: navegacion;
         }
         .main-femenino{
@@ -433,11 +427,9 @@ input{
             grid-area: portada-femenino;
         }
         .main-femenino{
-            grid-area: contenedor-posiciones-femenino; 
+            grid-area: posiciones-femenino; 
         }
         .footer-femenino{
             grid-area: redes;
         }
     }
-
-    
