--- a/estilos.css
+++ b/estilos.css
@@ -10,9 +10,6 @@ body{
     justify-content: center;
 }
 
-.r{
-    color: 
-}
 
 .navegacion{
     display: flex;
@@ -33,7 +30,7 @@ body{
 
 .imagen-banner{
     width:100%;
-    width:100%;
+    height:100%;
 }
 
 .h2-informacion{
@@ -60,10 +57,6 @@ body{
     width: 100%;
 }
 
-.contenedor-posiciones-femenino{
-    display: grid;
-    justify-content: center;
-}
 
 h1{
    
@@ -137,11 +130,7 @@ input{
     justify-content: center;
 }
 
-   
-.contenedor-posiciones-masculino{
-    display: flex;
-    justify-content: center;
-}
+
 
 /*INDEX GRID AREA*/
 
@@ -398,8 +387,6 @@ input{
         .menu li{
             display: inline-block;
         }
-        
-        
         
     }
 
