--- a/estilos.css
+++ b/estilos.css
@@ -10,8 +10,6 @@ body{
     justify-content: center;
 }
 
-
-
 .navegacion{
     display: flex;
     justify-content: center; 
@@ -31,7 +29,7 @@ body{
 
 .imagen-banner{
     width:100%;
-    width:100%;
+    height:100%;
 }
 
 .h2-informacion{
@@ -50,12 +48,6 @@ body{
     justify-content: center;
 }
 
-
-
-
-
-
-
 h1{
    
     text-align: center;
@@ -67,7 +59,6 @@ h2{
     color: aliceblue;
 }
 
-
 p, table {
     color:aliceblue;
     text-align: center;
@@ -78,11 +69,11 @@ a{
     color: aliceblue;
 }
 
-
 footer{
     color:aliceblue;
     text-align: center;
 }
+
 .formulario {
     color: aliceblue;
     display: inline-block;
@@ -93,9 +84,11 @@ footer{
 .button{
     width: 20px;
 }
+
 input{
    width: 300px;
   }
+
 .mensaje{
     height:100px;
 }
@@ -115,15 +108,18 @@ input{
 }
 
 .contenedor-posiciones-femenino{
-    display: flex;
+    display: grid;
     justify-content: center;
 }
 
-.imagen-femenino{
+
+
+/*CSS MASCULINO*/
+
+.portada-masculino {
     width: 100%;
 }
 
-/*CSS MASCULINO*/
 .contenedor-posiciones-masculino{
     display: flex;
     justify-content: center;
