--- a/estilos.css
+++ b/estilos.css
@@ -32,6 +32,16 @@ body{
     height:100%;
 }
 
+.imagen-femenino{
+    width: 100%;
+    height: 100%;
+}
+
+.imagen-masculino{
+    width: 100%;
+    height: 100%;
+}
+
 .h2-informacion{
     display: flex;
     justify-content: center;
@@ -111,7 +121,6 @@ input{
     display: grid;
     justify-content: center;
 }
-
 
 
 /*CSS MASCULINO*/
