corregi contenedor-posiciones-femenino en areas tablet y desktop

--- a/estilos.css
+++ b/estilos.css
@@ -326,15 +326,15 @@ input{
         grid-template-columns: 100%;
         grid-template-rows: auto auto auto auto auto;
         grid-template-areas:
-        "navegacion-femenino"
+        "navegacion"
         "intro-femenino"
         "portada-femenino"
-        "posiciones-femenino"
+        "contenedor-posiciones-femenino"
         "redes"
         ;
     }
 
-    .header-femenino{
+    .header{
         grid-area: navegacion;
     }
     .main-femenino{
@@ -344,7 +344,7 @@ input{
         grid-area: portada-femenino;
     }
     .main-femenino{
-        grid-area: posiciones-femenino;
+        grid-area: contenedor-posiciones-femenino;
     }
     .footer{
         grid-area: redes;
@@ -401,7 +401,7 @@ input{
         "navegacion"
         "intro-femenino"
         "portada-femenino"
-        "posiciones-femenino"
+        "contenedor-posiciones-femenino"
         "redes-femenino"
         ;
         }
