--- a/estilos.css
+++ b/estilos.css
@@ -122,10 +122,7 @@ input{
     justify-content: center;
 }
 
-.footer-femenino{
-    display: flex;
-    justify-content: center;
-}
+
 /*CSS PAGINA MASCULINO*/
 
 .portada-masculino {
@@ -377,7 +374,7 @@ input{
         "intro-femenino"
         "portada-femenino"
         "contenedor-posiciones-femenino"
-        "redes-femenino"
+        "redes"
         ;
         }
         
@@ -393,7 +390,7 @@ input{
         .main-femenino{
             grid-area: contenedor-posiciones-femenino; 
         }
-        .footer-femenino{
+        .footer{
             grid-area: redes;
         }
         
@@ -409,7 +406,7 @@ input{
         "intro-femenino"
         "portada-femenino"
         "contenedor-posiciones-femenino"
-        "redes-femenino"
+        "redes"
         ;
         }
         
@@ -425,7 +422,7 @@ input{
         .main-femenino{
             grid-area: contenedor-posiciones-femenino; 
         }
-        .footer-femenino{
+        .footer{
             grid-area: redes;
         }
 
