posicionando tabla de posiciones fenemnino y masculino

--- a/estilos.css
+++ b/estilos.css
@@ -118,7 +118,9 @@ input{
 }
 
 .contenedor-posiciones-femenino{
-    display: flex;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100% 100%;
     justify-content: center;
 }
 
@@ -130,7 +132,9 @@ input{
 }
 
 .contenedor-posiciones-masculino{
-    display: flex;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100% 100%;
     justify-content: center;
 }
 
