--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,4 @@
-.container-fluid {
+body {
     background-color: black;
     font-family: 'Montserrat Alternates', sans-serif;
     font-family: 'Poppins', sans-serif;
