--- a/estilos.css
+++ b/estilos.css
@@ -34,6 +34,10 @@
     justify-content: center;
 }
 
+.container-fluid {
+    background-color: black;
+}
+
 .imagen-portada {
     width: 100%;
     height: 100%;
