--- a/estilos.css
+++ b/estilos.css
@@ -38,6 +38,10 @@
     background-color: black;
 }
 
+.navbar .navbar-expand-lg .navbar-light .bg-light{
+    background-color: black;
+}
+
 .imagen-portada {
     width: 100%;
     height: 100%;
