--- a/estilos.css
+++ b/estilos.css
@@ -34,13 +34,13 @@
     justify-content: center;
 }
 
-.container-fluid {
+/*.container-fluid {
     background-color: black;
 }
 
 .navbar .navbar-expand-lg .navbar-light .bg-light{
     background-color: black;
-}
+} */
 
 .imagen-portada {
     width: 100%;
