--- a/estilos.css
+++ b/estilos.css
@@ -155,6 +155,7 @@ input {
 .tabla-posiciones-femenino {
     display: flex;
     justify-content: center;
+    width: auto;
 }
 
 /*INDEX GRID AREA
