--- a/estilos.css
+++ b/estilos.css
@@ -261,7 +261,7 @@ input {
 
 @media screen and (min-width:1024px) {
 
-    .navbar.navbar-expand-lg.navbar-light.bg-light{
+    .container-fluid{
         background-color: black;
         color:aliceblue
     }
