--- a/estilos.css
+++ b/estilos.css
@@ -479,5 +479,6 @@ FEMENINO MEDIA DESKTOP
     .contenedor-posiciones-femenino{
         display: flex;
         justify-content: center;
+        width: 500px;
     }
 }
