--- a/estilos.css
+++ b/estilos.css
@@ -476,7 +476,7 @@ FEMENINO MEDIA DESKTOP
 
     
 
-    .contenedor-posiciones-femenino{
+    .tabla-femenino{
         display: flex;
         justify-content: center;
         width: 500px;
