SASS antes de subir a github

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -449,7 +449,7 @@ input{
         }
     }
 
-     /* FEMENINO GRID AREAS
+     /* SEGUIR POR: MASCULINO GRID AREAS
 
      .posiciones-femenino{
         display: grid;
