--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,7 +3,7 @@
 @import "femenino";
 
 body{
-    background-color: $colorPrincipal;
+    background-color:black;
     font-family: 'Montserrat Alternates', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Rubik', sans-serif;
@@ -26,36 +26,70 @@ body{
     transform: translate(-20px);
     }
 
+.imagen-portada{
+    width:100%;
+    height:100%;
+}
 
+.imagen-banner{
+    width:100%;
+    height:100%;
+}
+
+.imagen-femenino{
+    width: 100%;
+    height: 100%;
+}
+
+.imagen-masculino{
+    width: 100%;
+    height: 100%;
+}
+
+.h2-informacion{
+    display: flex;
+    justify-content: center;
+}
+
+.h2-femenino{
+    display: flex;
+    justify-content: center;
+    
+}
+
+.h2-masculino{
+    display: flex;
+    justify-content: center;
+}
 
 h1{
    
     text-align: center;
-    color: $colorSecundario;
+    color: aliceblue;
 }
 
 h2{
     text-align: center;
-    color: $colorSecundario;
+    color: aliceblue;
 }
 
 p, table {
-    color:$colorSecundario;
+    color:aliceblue;
     text-align: center;
     
 }
 a{
     text-decoration: none;
-    color: $colorSecundario;
+    color: aliceblue;
 }
 
 footer{
-    color: $colorSecundario;
+    color:aliceblue;
     text-align: center;
 }
 
 .formulario {
-    color: $colorSecundario;
+    color: aliceblue;
     display: inline-block;
     position: relative;
     margin-left: 500px;
@@ -80,6 +114,7 @@ input{
     height: 25px;
     margin-top:20px;
 }
+
 
 
 /*CSS PAGINA MASCULINO*/
